tests/error/linear_errors/branch_use_field1.err
Error: Drop violation (at $FILE:12:4)
   | 
10 | @guppy
11 | def foo(b: bool) -> bool:
12 |     s = MyStruct(qubit())
   |     ^ Field `s.q` with non-droppable type `qubit` may be leaked
   |       ...
   | 
13 |     if b:
   |        - if this expression is `False`

Help: Make sure that `s.q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
